test/field/set_on_string.lox
"str".foo = "value" // error: only instances have fields
